--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,5 +19,5 @@
     <string name="retry">Perkrauti</string>
     <string name="loading">Kraunama</string>
     <string name="mars_photo">Marso Nuotraukos</string>
-    <string name="author">Enrikas Vaiciulis MKDF 20/4</string>
+    <string name="author">Enrikas Vaičiulis MKDF 20/4</string>
 </resources>
